--- a/app.css
+++ b/app.css
@@ -1,5 +1,10 @@
 body {
     display: flex;
-    background-color: rgb(33, 180, 99);
+    background-color: olive;
 }
- 
+ h1 {
+    font-size: 20px;
+ }
+ p {
+    font-size: 20px;
+ }
